# trailbase-benchmark

./: .gitmodules  README.md
benchmarks/drizzle/: README.md  package.json  pnpm-lock.yaml
benchmarks/drizzle/src/: index.ts
benchmarks/payloadcms_ts/: README.md  package.json  pnpm-lock.yaml
benchmarks/payloadcms_ts/src/: index.ts
benchmarks/pocketbase_dart/: README.md  pubspec.yaml
benchmarks/pocketbase_rust/: Cargo.toml  README.md
benchmarks/pocketbase_rust/src/: main.rs
benchmarks/pocketbase_ts/: .gitignore  README.md  package.json  pnpm-lock.yaml
benchmarks/pocketbase_ts/src/: index.ts
benchmarks/supabase/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
benchmarks/supabase/results/: README.md  docker.stats.json  process.ts
benchmarks/supabase/src/: index.ts
benchmarks/trailbase_dart/: README.md  pubspec.yaml
benchmarks/trailbase_dotnet/: .editorconfig  Program.cs  README.md  trailbase_dotnet.csproj
benchmarks/trailbase_rust/: Cargo.toml  README.md
benchmarks/trailbase_rust/src/: lib.rs  main.rs
benchmarks/trailbase_ts/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
benchmarks/trailbase_ts/src/: index.ts
setups/payloadcms/: README.md  package.json  pnpm-lock.yaml  sqlite.db
setups/payloadcms/src/: payload-types.ts  payload.config.ts
setups/pocketbase/: .gitignore  run.sh
setups/pocketbase/pb_hooks/: main.pb.js
setups/pocketbase/pb_migrations/: 1718961489_created_room.js  1718961521_created_message.js  (+17 more)
tools/: .gitignore  README.md  process.ts
tools/monitor/: README.md  analysis_options.yaml  pubspec.yaml
(+19 files in other folders)
