[package]
name = "trailbase_benchmark_runner_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
lazy_static = "1.5.0"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
serde = { version = "^1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = {version  = "^1.38.0", features=["rt-multi-thread"] }
