[package]
name = "trailbase_benchmark_runner_rust"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
test = false
bench = false

[[bin]]
name = "reqwest"
test = false
bench = false

[[bin]]
name = "ureq"
test = false
bench = false

[dependencies]
anyhow = "1.0.86"
bytes = "1.9.0"
crossbeam-queue = "0.3.12"
lazy_static = "1.5.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "^1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = {version  = "^1.38.0", features= ["rt-multi-thread", "macros"] }
trailbase-client = "^0.0.3"
ureq = { version = "2.12.1", features = ["json"] } 
